--- a/templates/cart/index.html
+++ b/templates/cart/index.html
@@ -3,5 +3,17 @@
 {% block title %}Cart{% endblock title %}
 
 {% block body %}
-Cart here
+<div class="content">
+    <div class="cart-title">
+        My Cart Page
+    </div>
+    <div class="preview">
+        <div class="preview-card">
+            <img src="/static/products/product4.png" class="preview-image" alt="">
+            <div class="preview-card-content">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sit sunt vero vitae tempora laborum quibusdam? Voluptatum unde necessitatibus iste, atque iure explicabo nam veniam minus odit assumenda quas eaque?
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock body %}
