--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -3,13 +3,46 @@
 {% block title %}Profile{% endblock title %}
 
 {% block body %}
-<div class="profile">
-    <img src="/static/img/unknownProfile.png" alt="" class="profile-image">
-    <div class="profile-name">
-        Yogesh Aggarwal
+<div class="sidebar">
+    <div class="profile">
+        <img src="/static/img/unknownProfile.png" alt="" class="profile-image">
+        <div class="profile-name">
+            Yogesh Aggarwal
+        </div>
+        <div class="profile-email">
+            developeryogeshgit@gmail.com
+        </div>
     </div>
-    <div class="profile-email">
-        developeryogeshgit@gmail.com
-    </div>
+</div>
+<div class="profile-content">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lectus egestas, feugiat augue vitae, malesuada leo. Nullam ultrices varius consectetur. Nullam pulvinar eu neque at hendrerit. Duis felis mi, volutpat vel ullamcorper sed, laoreet at orci. Fusce tincidunt sit amet velit non auctor. Aenean scelerisque convallis justo in posuere. Suspendisse ultricies, nisl sed rutrum suscipit, dui ex pellentesque erat, non tempor augue eros dapibus justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+
+Praesent nisl eros, ultrices id hendrerit eu, blandit ac tortor. Cras ac dolor eget magna rutrum dignissim eget nec dolor. Integer dignissim ipsum quis libero luctus finibus. Quisque purus elit, pellentesque vel urna vitae, dapibus luctus odio. Vivamus turpis nulla, pretium non pulvinar at, fringilla eu libero. Praesent magna turpis, mollis eu porta eu, mattis in nulla. Maecenas a varius neque. Sed et lorem felis. Sed finibus dapibus nisl. Integer vel erat condimentum quam ornare dapibus. Duis viverra tortor sed tristique vehicula. Praesent congue, ipsum sit amet scelerisque faucibus, lacus augue condimentum enim, sed semper urna purus a nisi. Aenean consequat, ipsum vitae consectetur pharetra, arcu magna consequat mi, quis euismod lorem purus nec sapien.
+
+Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam tristique, arcu id pulvinar suscipit, tortor ligula efficitur velit, ac iaculis diam nulla at risus. Morbi volutpat, dolor aliquet egestas dignissim, justo urna molestie arcu, sit amet suscipit ex erat in felis. Fusce tempus neque a neque mollis, nec tempus augue vestibulum. In at pretium massa. Phasellus ante mauris, congue id vehicula ac, sagittis ullamcorper ex. Curabitur laoreet hendrerit ipsum ac lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+
+Quisque sed massa eget neque dictum auctor at id felis. Donec non justo auctor, imperdiet orci sed, rhoncus nibh. In maximus tincidunt erat sit amet maximus. Curabitur pharetra sapien augue, eget facilisis ex vulputate nec. Pellentesque ultricies, leo eget tempor iaculis, neque tortor posuere sapien, eu auctor ex urna et metus. Ut pharetra eu massa in efficitur. Mauris ac maximus libero, sed imperdiet velit. Phasellus cursus molestie nulla at tincidunt.
+
+Mauris elementum eros luctus metus maximus, eu porttitor nisl venenatis. Sed interdum risus suscipit dolor vulputate vulputate. Vestibulum sed urna sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus sapien at elit volutpat tristique. Nullam id diam non nulla eleifend malesuada. Mauris tincidunt malesuada ligula ac posuere. Curabitur vehicula elit sit amet est fringilla, feugiat mollis magna tincidunt. Morbi vel dapibus purus. Curabitur elementum dui lorem, ut sagittis nisl pharetra eu. Nam vulputate neque et orci auctor aliquam nec ut sem. Aliquam odio quam, efficitur venenatis felis at, tincidunt faucibus nunc.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lectus egestas, feugiat augue vitae, malesuada leo. Nullam ultrices varius consectetur. Nullam pulvinar eu neque at hendrerit. Duis felis mi, volutpat vel ullamcorper sed, laoreet at orci. Fusce tincidunt sit amet velit non auctor. Aenean scelerisque convallis justo in posuere. Suspendisse ultricies, nisl sed rutrum suscipit, dui ex pellentesque erat, non tempor augue eros dapibus justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+
+Praesent nisl eros, ultrices id hendrerit eu, blandit ac tortor. Cras ac dolor eget magna rutrum dignissim eget nec dolor. Integer dignissim ipsum quis libero luctus finibus. Quisque purus elit, pellentesque vel urna vitae, dapibus luctus odio. Vivamus turpis nulla, pretium non pulvinar at, fringilla eu libero. Praesent magna turpis, mollis eu porta eu, mattis in nulla. Maecenas a varius neque. Sed et lorem felis. Sed finibus dapibus nisl. Integer vel erat condimentum quam ornare dapibus. Duis viverra tortor sed tristique vehicula. Praesent congue, ipsum sit amet scelerisque faucibus, lacus augue condimentum enim, sed semper urna purus a nisi. Aenean consequat, ipsum vitae consectetur pharetra, arcu magna consequat mi, quis euismod lorem purus nec sapien.
+
+Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam tristique, arcu id pulvinar suscipit, tortor ligula efficitur velit, ac iaculis diam nulla at risus. Morbi volutpat, dolor aliquet egestas dignissim, justo urna molestie arcu, sit amet suscipit ex erat in felis. Fusce tempus neque a neque mollis, nec tempus augue vestibulum. In at pretium massa. Phasellus ante mauris, congue id vehicula ac, sagittis ullamcorper ex. Curabitur laoreet hendrerit ipsum ac lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+
+Quisque sed massa eget neque dictum auctor at id felis. Donec non justo auctor, imperdiet orci sed, rhoncus nibh. In maximus tincidunt erat sit amet maximus. Curabitur pharetra sapien augue, eget facilisis ex vulputate nec. Pellentesque ultricies, leo eget tempor iaculis, neque tortor posuere sapien, eu auctor ex urna et metus. Ut pharetra eu massa in efficitur. Mauris ac maximus libero, sed imperdiet velit. Phasellus cursus molestie nulla at tincidunt.
+
+Mauris elementum eros luctus metus maximus, eu porttitor nisl venenatis. Sed interdum risus suscipit dolor vulputate vulputate. Vestibulum sed urna sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus sapien at elit volutpat tristique. Nullam id diam non nulla eleifend malesuada. Mauris tincidunt malesuada ligula ac posuere. Curabitur vehicula elit sit amet est fringilla, feugiat mollis magna tincidunt. Morbi vel dapibus purus. Curabitur elementum dui lorem, ut sagittis nisl pharetra eu. Nam vulputate neque et orci auctor aliquam nec ut sem. Aliquam odio quam, efficitur venenatis felis at, tincidunt faucibus nunc.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lectus egestas, feugiat augue vitae, malesuada leo. Nullam ultrices varius consectetur. Nullam pulvinar eu neque at hendrerit. Duis felis mi, volutpat vel ullamcorper sed, laoreet at orci. Fusce tincidunt sit amet velit non auctor. Aenean scelerisque convallis justo in posuere. Suspendisse ultricies, nisl sed rutrum suscipit, dui ex pellentesque erat, non tempor augue eros dapibus justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+
+Praesent nisl eros, ultrices id hendrerit eu, blandit ac tortor. Cras ac dolor eget magna rutrum dignissim eget nec dolor. Integer dignissim ipsum quis libero luctus finibus. Quisque purus elit, pellentesque vel urna vitae, dapibus luctus odio. Vivamus turpis nulla, pretium non pulvinar at, fringilla eu libero. Praesent magna turpis, mollis eu porta eu, mattis in nulla. Maecenas a varius neque. Sed et lorem felis. Sed finibus dapibus nisl. Integer vel erat condimentum quam ornare dapibus. Duis viverra tortor sed tristique vehicula. Praesent congue, ipsum sit amet scelerisque faucibus, lacus augue condimentum enim, sed semper urna purus a nisi. Aenean consequat, ipsum vitae consectetur pharetra, arcu magna consequat mi, quis euismod lorem purus nec sapien.
+
+Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam tristique, arcu id pulvinar suscipit, tortor ligula efficitur velit, ac iaculis diam nulla at risus. Morbi volutpat, dolor aliquet egestas dignissim, justo urna molestie arcu, sit amet suscipit ex erat in felis. Fusce tempus neque a neque mollis, nec tempus augue vestibulum. In at pretium massa. Phasellus ante mauris, congue id vehicula ac, sagittis ullamcorper ex. Curabitur laoreet hendrerit ipsum ac lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+
+Quisque sed massa eget neque dictum auctor at id felis. Donec non justo auctor, imperdiet orci sed, rhoncus nibh. In maximus tincidunt erat sit amet maximus. Curabitur pharetra sapien augue, eget facilisis ex vulputate nec. Pellentesque ultricies, leo eget tempor iaculis, neque tortor posuere sapien, eu auctor ex urna et metus. Ut pharetra eu massa in efficitur. Mauris ac maximus libero, sed imperdiet velit. Phasellus cursus molestie nulla at tincidunt.
+
+Mauris elementum eros luctus metus maximus, eu porttitor nisl venenatis. Sed interdum risus suscipit dolor vulputate vulputate. Vestibulum sed urna sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus sapien at elit volutpat tristique. Nullam id diam non nulla eleifend malesuada. Mauris tincidunt malesuada ligula ac posuere. Curabitur vehicula elit sit amet est fringilla, feugiat mollis magna tincidunt. Morbi vel dapibus purus. Curabitur elementum dui lorem, ut sagittis nisl pharetra eu. Nam vulputate neque et orci auctor aliquam nec ut sem. Aliquam odio quam, efficitur venenatis felis at, tincidunt faucibus nunc.
 </div>
 {% endblock body %}
