Improved user view

--- a/templates/user/address.html
+++ b/templates/user/address.html
@@ -4,6 +4,6 @@
 
 {% block body %}
 <div class="profile-content">
-    General content here.
+    Address content here.
 </div>
 {% endblock body %}
