--- a/static/user/css/index.css
+++ b/static/user/css/index.css
@@ -62,7 +62,27 @@ font-family: 'Acme', sans-serif;
   float: left;
 }
 
+.profile-content-tab {
+  margin: 3% 3% 0 28%;
+}
+
 .profile-content {
-  float: right;
-  margin: -22% 3% 0 28%;
+  margin: 1.5% 0 1.5% 30%;
+  font-size: 20px;
+}
+
+.tab-switch-btn {
+  margin: 0 5px 0 5px;
+  padding: 1% 5% 1% 6%;
+  outline: none;
+  color: white;
+  background: linear-gradient(to right, rgb(0, 162, 255) -58%,rgb(0, 89, 255) 100%);
+  border-radius: 10px;
+}
+
+.tab-switch-btn:hover,
+.tab-switch-btn:active,
+.tab-switch-btn:focus {
+  background: linear-gradient(to right, rgb(0, 117, 185) -58%,rgb(0, 110, 255) 100%);
+  color: white;
 }
