--- a/templates/user/payment.html
+++ b/templates/user/payment.html
@@ -4,6 +4,6 @@
 
 {% block body %}
 <div class="profile-content">
-    General content here.
+    Payment content here.
 </div>
 {% endblock body %}
