--- a/templates/user/security.html
+++ b/templates/user/security.html
@@ -4,6 +4,6 @@
 
 {% block body %}
 <div class="profile-content">
-    General content here.
+    Security content here.
 </div>
 {% endblock body %}
