--- a/static/user/css/index.css
+++ b/static/user/css/index.css
@@ -63,11 +63,11 @@ font-family: 'Acme', sans-serif;
 }
 
 .profile-content-tab {
-  margin: 3% 3% 0 28%;
+  margin: 3% 3% 4% 28%;
 }
 
 .profile-content {
-  margin: 1.5% 0 1.5% 30%;
+  margin: 1.5% 4% 1.5% 30%;
   font-size: 20px;
 }
 
