Changed titles of error pages

--- a/templates/global/500.html
+++ b/templates/global/500.html
@@ -1,6 +1,6 @@
 {% extends 'global/navbar.html' %}
 
-{% block titleBar %}{% block title %}{% endblock title %}{% endblock titleBar %}
+{% block titleBar %}500{% endblock titleBar %}
 
 {% block topBar %}
   <!-- CSS -->
