Added search app

--- a/templates/checkout/failed.html
+++ b/templates/checkout/failed.html
@@ -1,6 +1,6 @@
 {% extends 'checkout/basic.html' %}
 
-{% block title %}Thank You{% endblock title %}
+{% block title %}Failed{% endblock title %}
 
 {% block top %}
 <link rel="stylesheet" href="/static/checkout/css/fail.css" />
