--- a/templates/search/basic.html
+++ b/templates/search/basic.html
@@ -4,10 +4,10 @@
 
 {% block topBar %}
   <!-- CSS -->
-  <link rel="stylesheet" href="/static/blog/css/index.css" />
+  <link rel="stylesheet" href="/static/search/css/index.css" />
   
   <!-- JS -->
-  <script src="/static/blog/js/index.js"></script>
+  <script src="/static/search/js/index.js"></script>
 
   {% block top %}{% endblock top %}
 {% endblock topBar %}
