--- a/templates/user/basic.html
+++ b/templates/user/basic.html
@@ -4,10 +4,10 @@
 
 {% block topBar %}
   <!-- CSS -->
-  <link rel="stylesheet" href="/static/user/css/index.css" />
+  <link rel="stylesheet" href="/static/user/css/basic.css" />
   
   <!-- JS -->
-  <script src="/static/user/js/index.js"></script>
+  <script src="/static/user/js/basic.js"></script>
 
   {% block top %}{% endblock top %}
 {% endblock topBar %}
@@ -32,11 +32,11 @@
         <a href="/user/security" class="tab-switch-btn">
             Login & security
         </a>
-        <a href="/user/address" class="tab-switch-btn">
-            Your addresses
-        </a>
         <a href="/user/payment" class="tab-switch-btn">
             Payment options
+        </a>
+        <a href="/user/address" class="tab-switch-btn">
+            My addresses
         </a>
         <a href="/user/stuff" class="tab-switch-btn">
             My stuff
