--- a/templates/global/navbar.html
+++ b/templates/global/navbar.html
@@ -73,7 +73,58 @@
   {% block bodyBar %}{% endblock bodyBar %}
 
   <footer>
-    
+    <div class="logo">
+      <img src="/static/global/img/brand-logo.png" id="brand-logo" alt="">
+    </div>
+    <div class="footer-content">
+      <ul>
+        <li>
+          Themes
+        </li>
+        <li>
+          Pre book
+        </li>
+        <li>
+          Buy your choice
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          Services
+        </li>
+        <li>
+          Track
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          Showcase
+        </li>
+        <li>
+          Kit
+        </li>
+        <li>
+          Developer
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          About Us
+        </li>
+        <li>
+          Contact Us
+        </li>
+        <li>
+          Affiliates
+        </li>
+        <li>
+          Resources
+        </li>
+      </ul>
+    </div>
   </footer>
 </body>
 {% block bottomBar %}{% endblock bottomBar %}
