--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -76,19 +76,19 @@
     Recieve Email for
   </div>
   <div class="container-block">
-    <input type="checkbox" class="checkbox-btn" name="checkbox-btn1" id="email-checkbox-btn" value="type">
+    <input type="checkbox" class="checkbox-btn" name="checkbox-btn1" id="checkbox-btn" value="type">
     <label for="type" class="checkbox-label">
         New products
     </label>
   </div>
   <div class="container-block">
-    <input type="checkbox" class="checkbox-btn" name="checkbox-btn1" id="email-checkbox-btn" value="type">
+    <input type="checkbox" class="checkbox-btn" name="checkbox-btn1" id="checkbox-btn" value="type">
     <label for="type" class="checkbox-label">
         Placed orders
     </label>
   </div>
   <div class="container-block">
-    <input type="checkbox" class="checkbox-btn" name="checkbox-btn1" id="email-checkbox-btn" value="type" disabled checked>
+    <input type="checkbox" class="checkbox-btn" name="checkbox-btn1" id="checkbox-btn" value="type" disabled checked>
     <label for="type" class="checkbox-label">
         Security & privacy policy
     </label>
