--- a/static/user/css/basic.css
+++ b/static/user/css/basic.css
@@ -72,8 +72,9 @@ font-family: 'Acme', sans-serif;
 }
 
 .tab-switch-btn {
-  margin: 0 5px 0 5px;
-  padding: 1% 5% 1% 6%;
+  display: inline-block;
+  margin: 0 5px 1% 5px;
+  padding: 1% 4% 1% 4%;
   outline: none;
   color: white;
   font-weight: 600;
