--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,29 +3,35 @@
 {% block title %}Home{% endblock title %}
 
 {% block body %}
-<div class="cards-body">
+<div class="cards">
 {% for id in products.items %}
   <div class="card">
-    <img class="card-thumbnail" src="{{ id.1.images.0 }}">
-    <h3 class="card-title">{{ id.1.name|slice:"0:50" }}</h3>
-    <p class="card-description">{{ id.1.shortDesc|slice:"0:150" }}...</p>
+    <div class="card-thumbnail">
+      <img src="{{ id.1.images.0 }}">
+    </div>
+    <div class="card-body">
+      <h3 class="card-title">{{ id.1.name|slice:"0:50" }}</h3>
+      <p class="card-description">{{ id.1.shortDesc|slice:"0:150" }}...</p>
+      <divider class="card-divider"></divider>
+      {% if 'false' in id.1.sale %}
+        <h4 class="card-price">₹ {{ id.1.price }}</h4>
+      {% else %}
+        <h4 class="card-price">₹ {{ id.1.price }} sale</h4>
+      <!--
+        <h4 class="card-price-cut">-₹ {{ id.1.price }}
+          <h4 class="card-price-sale-rate">{{ id.1.sale }} off</h4>
+          <h4 class="card-price-new">{{ id.1.price }}</h4>
+        </h4>
+      -->
+      {% endif %}
+    </div>
     <divider class="card-divider"></divider>
-    {% if 'false' in id.1.sale %}
-    <h4 class="card-price">₹ {{ id.1.price }}</h4>
-    {% else %}
-    <h4 class="card-price">₹ {{ id.1.price }} sale</h4>
-    <!--
-    <h4 class="card-price-cut">-₹ {{ id.1.price }}
-      <h4 class="card-price-sale-rate">{{ id.1.sale }} off</h4>
-      <h4 class="card-price-new">{{ id.1.price }}</h4>
-    </h4>
-    -->
-    {% endif %}
-    <divider class="card-divider"></divider>
-    <button class="btn btn-primary add-to-cart" id="{{ id.0 }}" onclick="addProduct(this.id)">Add to cart</button>
-    <a href="/view/{{ id.0 }}">
-      <button class="btn btn-secondary quick-view" id="{{ id.0 }}" onclick="quickView(this.id)">Quick View</button>
-    </a>
+    <div class="card-btns">
+      <button class="add-to-cart" id="{{ id.0 }}" onclick="addProduct(this.id)">Add to cart</button>
+      <a class="quick-view" href="/view/{{ id.0 }}">
+        Quick View
+      </a>
+    </div>
   </div>
 {% endfor %}
 </div>
