--- a/templates/global/navbar.html
+++ b/templates/global/navbar.html
@@ -7,9 +7,6 @@
   <title>Medium Cart - {% block titleBar %}{% endblock titleBar %}</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/static/global/requires/css/semantic.min.css" />
-  <link rel="stylesheet" href="/static/global/requires/css/argon.min.css" />
-
   <link rel="stylesheet" href="/static/global/css/cards.css" />
   <link rel="stylesheet" href="/static/global/css/common.css" />
   <link rel="stylesheet" href="/static/global/css/navbar.css" />
@@ -17,9 +14,6 @@
 
   <!-- JS -->
   <script src="/static/global/requires/js/jquery.3.4.1.js"></script>
-  <script src="/static/global/requires/js/argon-dashboard.js"></script>
-  <script src="/static/global/requires/js/argon.min.js"></script>
-
   <script src="/static/global/js/tools.js"></script>
   
   <!-- Favicon -->
@@ -28,48 +22,41 @@
   {% block topBar %}{% endblock topBar %}
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <img src="/static/global/img/brand-logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    <a class="navbar-brand" id="nav-title" href="/">Medium cart</a>
-    <div class="collapse navbar-collapse" id="navbarContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/blog">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about">About Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/user">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/cart/">Cart</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Category
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="">Category 1</a>
-            <a class="dropdown-item" href="">Category 2</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="">Category 3</a>
-          </div>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0" action="/search">
-        <input class="form-control mr-sm-2" id="search-box" name="query" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-
+  <header>
+    <nav>
+      <div class="brand">
+        <img src="/static/global/img/brand-logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <a href="/">Medium cart</a>
+      </div>
+      <div class="nav-content">
+        <ul>
+          <li class="nav-item">
+            <a href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="/blog">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a href="/about">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="/contact">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="/user">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a href="/cart/">Cart</a>
+          </li>
+        </ul>
+        <form class="search-form" action="/search">
+          <input class="search-box" name="query" type="search" placeholder="Search" aria-label="Search">
+          <button class="search-button" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+  </header>
+  
   {% block bodyBar %}{% endblock bodyBar %}
 
   <footer>
